--- a/.github/workflows/review.yaml
+++ b/.github/workflows/review.yaml
@@ -16,8 +16,31 @@ jobs:
       pull-requests: read
     steps:
       - name: Require approval from at least one reviewer
+        id: approval_check
         uses: peternied/required-approval@v1.3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           required-approvers-list: "bensgilbert,erri4,pedro-alvesjr,Tails5000,Vinyzu"
           min-required: 1
+
+      - name: Check if reminder comment exists
+        if: steps.approval_check.outputs.specific-approvals == ''
+        id: find_comment
+        uses: peter-evans/find-comment@v3
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          comment-author: github-actions[bot]
+          body-includes: "Waiting for at least one more approval"
+
+      - name: Add reminder comment if missing
+        if: steps.approval_check.outputs.specific-approvals == '' && steps.find_comment.outputs.comment-id == ''
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            ⏳ **Waiting for at least one more approval** from:
+            - @bensgilbert
+            - @erri4
+            - @pedro-alvesjr
+            - @tails5000
+            - @vinyzu
