--- a/.github/workflows/review.yaml
+++ b/.github/workflows/review.yaml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - main
+    types: [opened, synchronize, reopened, ready_for_review]
   pull_request_review:
     types: [submitted]
 
@@ -28,8 +29,8 @@ jobs:
 
   comment-if-missing:
     runs-on: ubuntu-latest
-    needs: approval-check
-    if: needs.approval-check.outputs.has_approval == ''
+    needs: check-approvals
+    if: needs.check-approvals.outputs.has_approval == ''
     permissions:
       pull-requests: write
     steps:
