--- a/.github/workflows/review.yaml
+++ b/.github/workflows/review.yaml
@@ -11,12 +11,10 @@ on:
 jobs:
   check-approvals:
     runs-on: ubuntu-latest
-    outputs:
-      has_approval: ${{ steps.approval_check.outputs.specific-approvals }}
     permissions:
       id-token: write
       contents: read
-      pull-requests: read
+      pull-requests: write  # needed for commenting
     steps:
       - name: Require approval from at least one reviewer
         id: approval_check
@@ -27,23 +25,17 @@ jobs:
           min-required: 1
         continue-on-error: true
 
-  comment-if-missing:
-    runs-on: ubuntu-latest
-    needs: check-approvals
-    if: needs.check-approvals.outputs.has_approval == ''
-    permissions:
-      pull-requests: write
-    steps:
-      - name: Check if reminder comment exists
-        id: find_comment
+      - name: Add reminder comment if approval is missing
+        if: steps.approval_check.outputs.specific-approvals == ''
+        id: find_comment_missing
         uses: peter-evans/find-comment@v3
         with:
           issue-number: ${{ github.event.pull_request.number }}
           comment-author: github-actions[bot]
           body-includes: "Waiting for at least one more approval"
 
-      - name: Add reminder comment if missing
-        if: steps.find_comment.outputs.comment-id == ''
+      - name: Post reminder comment
+        if: steps.approval_check.outputs.specific-approvals == '' && steps.find_comment_missing.outputs.comment-id == ''
         uses: peter-evans/create-or-update-comment@v4
         with:
           issue-number: ${{ github.event.pull_request.number }}
@@ -55,12 +47,23 @@ jobs:
             - @tails5000
             - @vinyzu
 
-  fail-if-missing:
-    runs-on: ubuntu-latest
-    needs: [check-approvals, comment-if-missing]
-    if: needs.check-approvals.outputs.has_approval == ''
-    steps:
-      - name: Fail the workflow if missing approval
+      - name: Delete reminder comment if approval is now present
+        if: steps.approval_check.outputs.specific-approvals != ''
+        id: find_comment_present
+        uses: peter-evans/find-comment@v3
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          comment-author: github-actions[bot]
+          body-includes: "Waiting for at least one more approval"
+
+      - name: Remove comment
+        if: steps.find_comment_present.outputs.comment-id != ''
+        uses: peter-evans/delete-comment@v3
+        with:
+          comment-id: ${{ steps.find_comment_present.outputs.comment-id }}
+
+      - name: Fail workflow if approval is missing
+        if: steps.approval_check.outputs.specific-approvals == ''
         run: |
           echo "❌ Approval missing: at least one of the required users must approve."
           exit 1
