--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ ignore = [
     "D107",
     # Docstring whitespace.
     "D203",
+    "D205",
     "D212",
     # Docstring punctuation.
     "D415",
@@ -77,13 +78,12 @@ ignore = [
     "TD002",
     "TD003",
     "FIX",
-    # Annotations.
-    "ANN101",
-    "ANN102",
     # Future annotations.
     "FA",
     # Error messages.
     "EM",
+    # Path/Opens
+    "PTH123"
 ]
 
 [tool.ruff.lint.pydocstyle]
