Add Functionality to Upload Images/Data to Hoster
Fixes https://github.com/WittyWisterias/WittyWisterias/issues/7

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,10 @@ target-version = "py312"
 fix = true
 # The directory containing the source code.
 src = ["src"]
+exclude = [
+    # Want to keep Formatting in the requirements file.
+    "requirements.txt",
+]
 
 [tool.ruff.lint]
 # Enable all linting rules.
@@ -82,8 +86,17 @@ ignore = [
     "FA",
     # Error messages.
     "EM",
+    "TRY003",
     # Path/Opens
-    "PTH123"
+    "PTH123",
+    # Trailing commas
+    "COM812",
+    # Magic Values
+    "PLR2004",
+    # Pseudo-random numbers
+    "S311",
+    # Hardcoded Password
+    "S105"
 ]
 
 [tool.ruff.lint.pydocstyle]
