--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+# Setup requirements for the project
 pre-commit~=4.2.0
 ruff~=0.12.7
 setuptools~=80.9.0
+types-requests
+# Project dependencies
+httpx~=0.28.1
+pillow~=11.3.0
+xxhash~=3.5.0
