--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,9 @@ ignore = [
     # Pseudo-random numbers
     "S311",
     # Hardcoded Password
-    "S105"
+    "S105",
+    # Commented-out code
+    "ERA001",
 ]
 
 [tool.ruff.lint.pydocstyle]
