--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,11 @@ ignore = [
     "S105",
     # Commented-out code
     "ERA001",
+    # Functions with too many arguments
+    "PLR0913",
+    # Boolean Type Arguments
+    "FBT001",
+    "FBT002"
 ]
 
 [tool.ruff.lint.pydocstyle]
