Add Message Bubbles
For now you can just enter text and an image url.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,9 @@ ignore = [
     "S105",
     # Commented-out code
     "ERA001",
+    # Boolean Type Arguments
+    "FBT001",
+    "FBT002"
 ]
 
 [tool.ruff.lint.pydocstyle]
